# crsf-mim

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  partitions.csv  protocol.proto  sdkconfig.defaults
components/async_logging/: CMakeLists.txt  Kconfig  async_logging.cpp  async_logging.h
components/la/: CMakeLists.txt  la.c  la.h
components/la/test/: CMakeLists.txt  test_la.c
components/libcrsf/: CMakeLists.txt  Kconfig  libcrsf.c  libcrsf.h  libcrsf_crc8.c  libcrsf_crc8.h  libcrsf_def.h  libcrsf_device.c  libcrsf_device.h  libcrsf_device_param.h  libcrsf_parser.c  libcrsf_parser.h  libcrsf_payload.c  libcrsf_payload.h
components/libcrsf/test/: CMakeLists.txt  test_libcrsf.c  test_libcrsf_payload.c
components/libla/: CMakeLists.txt  libla_matrix.c  libla_matrix.h  libla_vector.c  libla_vector.h
components/libnet/: CMakeLists.txt  Kconfig  libnet.c  libnet.h
components/libnet/test/: CMakeLists.txt  test_libnet.c
components/mim_conn/: CMakeLists.txt  libnet.h  mim_conn.c  mim_conn.h
components/mim_nav/: CMakeLists.txt  mim_nav.c  mim_nav.h  nav.h
components/mim_nav/test/: CMakeLists.txt  test_nav.c
components/mim_panel/: CMakeLists.txt  mim_panel.c  mim_panel.h  mim_panel_httpd.c  mim_panel_httpd.h
components/mim_panel/panel/: README.md  index.html  package-lock.json  package.json  vite.config.js
components/mim_panel/panel/dist-prod/: index-BLA1XhbU.js  index.html  style-BP-bNX3r.css
components/mim_panel/panel/src/: App.svelte  main.js
components/mim_panel/panel/src/components/: ControlPanel.svelte  GuidancePanel.svelte  MapView.svelte  SettingsPanel.svelte  StatusPanel.svelte
components/mim_panel/panel/src/lib/: websocket.js
components/mim_rc/: CMakeLists.txt
components/mim_settings/: CMakeLists.txt  mim_settings.c  mim_settings.h
components/nanopb/: CMakeLists.txt
components/nav/: CMakeLists.txt  nav.c  nav.h  nav_guidance.c  nav_guidance.h  nav_pitcher.c  nav_pitcher.h  nav_vector.c  nav_vector.h
components/nav/test/: nav_guidance.c  test_nav_guidance.c
components/proto/: CMakeLists.txt
components/protocol/: CMakeLists.txt  protocol_crsf.cpp  protocol_crsf.h  protocol_crsf_device.cpp  protocol_crsf_device.h  protocol_crsf_device_param.cpp  protocol_crsf_device_param.h
components/skymap/: CMakeLists.txt  skymap.c  skymap.h  skymap.pb.c  skymap.pb.h  skymap.proto
components/tools/: CMakeLists.txt  crc8.cpp  crc8.h  lqcalc.c  lqcalc.h  tools.h
components/util/: CMakeLists.txt  util.c  util.h  util_lqcalc.c  util_lqcalc.h
lua/TELEMETRY/: mim.lua
lua/WIDGETS/mim/: main.lua
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main_rx.c  main_rx.cpp  main_tx.c  main_tx.cpp  mim_conn.c  mim_conn.h  mim_menu.c  mim_menu.h  mim_nav.c  mim_nav.h  mim_rc.c  mim_rc.h  mim_settings.c  mim_settings.h  mim_skymap.c  mim_skymap.h  mim_telem.c  mim_telem.h  mim_uart.c  mim_uart.h
py/: crsf_telem.py  mav_radar.py  mav_target.py  mavlink.py  pitcher.py  pronav.py  sitl.sh  skymap_pb2.py  skymap_pb2.pyi  tatep.py  test_pronav.py  tracker.py
py/sitl/: crsf-mim.param
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  Kconfig  test_main.c
